welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:2: error: type mismatch;
 found   : Int
 required: Boolean
	if ( a % 3 == 0 && a & 5 == 0 ) return "fizzBuzz"
                           ^